<resources>
    <string name="app_name">MEDI CONSULT</string>
    <string name="title_activity_main">main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="key"> ---------- ENTER YOUR GOOGLE MAPS API KEY ----------- </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contact">contact</string>
    <string name="title_activity_map">Map</string>
    <string-array name="symptom_list">
        <item>SELECT SYMPTOM</item>
        <item>Anxiety</item>
        <item>Stomach Ache</item>
        <item>Nausea</item>
        <item>Vomiting</item>
        <item>Fever</item>
        <item>Sudden Weight Loss</item>
        <item>Sweating</item>
        <item>Muscle And Body Pain</item>
        <item>Thirsty Than Usual</item>
        <item>Headaches</item>
        <item>Weakness/Fatigue</item>
        <item>Abdominal Pain</item>
        <item>Muscle Pain</item>
        <item>Dry Cough</item>
        <item>Diarrhoea/Constipation</item>
        <item>Frequent Urination</item>
        <item>Hunger</item>
        <item>Blurred Vision</item>
        <item>Skin Itching</item>
        <item>Chest Pain</item>
        <item>Shortness in Breath</item>
        <item>Dizziness</item>
        <item>Fast Heartbeat</item>
        <item>Indigestion</item>
        <item>Pressure Or Heaviness In Chest</item>

    </string-array>
    <string name="card1_text">What is Heart Rate?</string>
    <string name="text1_1" formatted="false">
        \n<font>Your heart rate, or pulse, is the number of times your heart beats per unit of time, usually a minute.</font>\n
        \n<font>Each time the heart beats, blood is pumped out of the heart and into the body to supply oxygen to body functioning. Since the need for oxygen changes when people are under different states, such as resting, exercising, etc., the workload of the heart to circulate blood changes.</font>\n
        \n<font>There are two different heart rate indexes, resting heart rate and target heart rate. One is for measuring how your heart beats when you are at rest. The other one is used to know what your ideal target heart rate is during exercise.</font>
    </string>
    <string name="card1_2text">Resting Heart Rate Ranges:</string>
    <string name="text1_2" formatted="false">The resting heart rate is divided into three ranges, Slow, Normal and Fast. Here are the ranges of normal resting heart rate:
        \n<font>· Children (ages 1 to 2 years): 80 to 130 beats per minute</font>
        \n<font>. Children (ages 3 to 4 years): 80 to 120 beats per minute</font>
        \n<font>. Children (ages 5 to 6 years): 75 to 115 beats per minute</font>
        \n<font>. Children (ages 7 to 9 years): 70 to 110 beats per minute</font>
        \n<font>. Children (ages 10 to 15 years): 70 to 100 beats per minute</font>
        \n<font>• People (over 15 years old): 60 to 100 beats per minute</font>
</string>
    <string name="card1_3text">Exercise Intensity Ranges:</string>
    <string name="text1_3" formatted="false">During exercise, you can see your training intensity by target heart rate. Here are the target heart rate ranges accordingly:\n
        <font>•Warm Up:60% of HR max</font>
        <font>•Target Training:less than 60%~ 79% of HR max</font>
        <font>•High-intensity: 80% ~ 89% of HR max</font>
        <font>•Extreme: >=90% of HR max</font>\n
Please note that our app cannot be used as a replacement for professional healthcare services, if you have a consistent racing heart or any other heart rate problems, it is vital to consult your doctor in time.</string>
    <string name="card2_text">Factors Affecting Heart Rate</string>
    <string name="factor_text" formatted="false">\n<font size="16">Your heart rate varies throughout the day. It is because that certain factors can play a role in directly affecting your heart rate. If you read on, you will know about them.</font>
    </string>
    <string name="tem_text" formatted="false">
        \n<font size="18"><b>Temperature:</b></font>
        \n<font size="16">The change of the air temperature or your body temperature will influence your heart rate. If you feel too cold or too hot, the heart will promote blood pumping to your skin to warm or cool you, thus, making your heart rate increase no more than 5 to 10 beats per minute. Furthermore, high humidity can also cause an increase in heart rate.</font>
    </string>
    <string name="pos_text" formatted="false">
        \n<font size="18"><b>Body Position:</b></font>
        \n<font size="16">Your heart rate of different body positions usually does n\'t change. However, if you suddenly change your body position to standing up, your heart rate will increase for the first 15 to 20 seconds. Afterwards, it will return to the original number.</font>
    </string>
    <string name="emo_text" formatted="false">
        \n<font size="18"><b>Emotions:</b></font>
        \n<font size="16">Being too emotional and experiencing a stressful situation will raise your heart rate.</font>
    </string>
    <string name="body_text" formatted="false">
        \n<font size="18"><b>Body Size:</b></font>
        \n<font size="16">People who have severe obesity can have a slightly faster pulse, usually no more than 100 beats per minute.</font>
    </string>
    <string name="coff_text" formatted="false">
       \n<font size="18"><b>Caffeine And Nicotine:</b></font>
       \n<font size="16">Coffee, tea, soda and other drinks that include caffeine can raise your heart rate, so does nicotine. Within one hour of intaking caffeine, its effect on heart rate reaches its peak. Your heart rate won\'t return to the original number until after 4 to 6 hours.</font>
   </string>
    <string name="saturate_text" formatted="false">
       \n<font size="18"><b>Saturated Fat and Sodium:</b></font>
       \n<font size="16">When you eat food with too much sodium, your kidney can\'t remove enough of it. Hence, your heart tries to pump more blood to your kidney to dilute it, causing an increase in heart rate. Having food with saturated fat can raise your cholesterol. Too much cholesterol can lead to a buildup of plaque in your arteries, which can change your heart activities and increase your heart rate.</font>
   </string>
    <string name="alcohol_text" formatted="false">
        \n<font size="18"><b>Alcohol:</b></font>
        \n<font size="16">It has been proved that a man who drinks more than five alcoholic beverages and a woman who drinks more than four within two hours can have an irregular and speedy heart rate.</font>
    </string>
    <string name="Med_text" formatted="false">
        \n<font size="18"><b>Medication:</b></font>
        \n<font size="16">If you are having beta blockers, you are likely to have a slow heart rate. On the other hand, excess thyroid hormone also causes the heart to beat harder and faster and may trigger abnormal heart rhythms.</font>
    </string>
    <string name="age_text" formatted="false">
        \n<font size="18"><b>Age:</b></font>
        \n<font size="16">When you get older, your RHR !(resting heart rate) would not change notably while the THR !(training heart rate) will become slower.</font>
    </string>
    <string name="gender_text" formatted="false">
        \n<font size="18"><b>Gender:</b></font>
        \n<font size="16">The average resting heart rate of women is higher than men\'s. Nevertheless, women tend to have a lower risk of cardiac diseases than men.</font>
    </string>
    <string name="exercise_text" formatted="false">
        \n<font size="18"><b>Exercise:</b></font>
        \n<font size="16">Gradually, regular exercise will lower your resting heart rate and reduce the risk of death due to a high resting heart rate.</font>
    </string>
    <string name="card3_text">Common Heart Diseases</string>
    <string name="text3">Several types of conditions affecting heart structure or function can be collectively called heart disease. According to the National Library of Medicine, heart disease is the leading cause of death and disability in the U.S. What needs to be mentioned is that there are many types of heart disease that are caused by different roots. Find out common types of them by reading on.</string>
    <string name="text3_1" formatted="false">\n<font size="18"><b>• Congenital Heart Disease</b></font>
        \n<font size="16">Congenital heart disease, also called congenital heart defect, is a kind of heart problem that presents at birth. Atypical heart valves, Septal defects, Atresia are common types of congenital heart diseases. Some congenital heart defects can never be diagnosed as they may not cause any symptoms.</font>
    </string>
    <string name="card6_text">Target Heart Rate</string>
    <string name="text6">Target heart rate !(THR or training heart rate) means the suggested range of how often your heart beats during exercise for improving health. It is an important index for you to exercise safely.</string>
    <string name="text6_1" formatted="false">
        \n<font size="16">Your THR depends on the highest number of times your heart can beat in one minute, which is your maximum heart rate. Generally speaking, a man\'s estimated maximum heart rate can be calculated as 220 minus his age. If you are a woman, based on research conducted by Northwestern Medicine, you can use the equation HRmax = 206 - (0.88 x your age) to get an accurate result.</font>\n
        \n<font size="16">Specifically, if you are doing a moderate-intensity activity, your THR should be between 50% to 70% of your maximum heart rate.If you are doing vigorous exercise, your THR should be between 70% to 85% of your maximum heart rate.</font>\n
        \n<font size="16">For instance, a 40-year-old man\'s maximum heart rate is 220 minus 40, which is 180. The THR should be 50% to 85% of 180, in other words, 90 to 153 beats per minute.</font>
    </string>
    <string name="text6_2">If you are training to burn body fat or improve your cardiovascular health, you can use our app to get more accurate and scientific THR automatically. You can skip the math mentioned above and input your age and gender whether you are doing warm-up, moderate training, high-intensity training, or an extremely vigorous workout.</string>
</resources>